# althea-link

./: .eslintrc.json  .gitignore  README.md  althea-v2.code-workspace  dump.rdb  global.d.ts  package-lock.json  package.json
.github/workflows/: backend.yml  deploy.yml  testing.yml  validate.yml
app/: globals.scss  home.module.scss  layout.tsx  page.tsx
app/bridge/: bridge.module.scss  bridging.tsx  page.tsx
app/governance/: gov.module.scss  page.tsx
app/lending/: page.tsx
app/lp/: lp.module.scss  page.tsx  utils.ts
app/staking/: page.tsx  staking.module.scss
backend/: Cargo.toml  Cross.toml  README.md
backend/.github/workflows/: rust.yml
backend/src/: database.rs  main.rs  server.rs
backend/src/althea/: abi_util.rs  database.rs  delegations.rs  endpoints.rs  error.rs  governance.rs  mod.rs  pools.rs  token_mappings.rs  validators.rs
backend/src/althea/ambient/: croc_query.rs  events.rs  mod.rs  pools.rs  positions.rs
backend/src/althea/database/: curve.rs  mod.rs  pools.rs  positions.rs
components/: text.tsx
components/althea_net/: AltheaL.tsx  AltheaL1.tsx  AltheaLogo.tsx  CropMarks.tsx  cropmarks.module.scss
components/amount/: amount.tsx
components/animated/: loader.tsx
components/animated_background_home/: anim_bg.module.scss  animatedBackgroundHome.tsx
components/button/: button.tsx
deploy/: Vagrantfile  deploy.sh  deploy.yml  dockerfile  hosts
frontend/: .env.example  .gitignore  README.md  next.config.js  package-lock.json
provider/: analytics.tsx  rainbowProvider.tsx
stores/: transactionStore.tsx
(+179 files in other folders)
